Change over to new VRWarg

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+	p.small {
+	line-height: 10px;
+	}
+	p.big {
+	line-height: 60px;
+	}
+    </style>
 
 </head>
 
@@ -79,8 +87,8 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">VRWarg</div>
-                <div class="intro-lead-in">The 21st Century Approach to Pain & Anxiety Management</div>
-				<a href="https://youtu.be/ylPfU3TAkFw" class="page-scroll btn btn-xl">See what we do</a> <!-- TODO: Need to add link to video of platform -->
+                <div class="intro-lead-in">Providing 6-DoF inside-out tracking for Mobile-VR</div>
+				<a href="https://youtu.be/_YLtCcQiyJQ" class="page-scroll btn btn-xl">See what we do</a> <!-- TODO: Need to add link to video of platform -->
             </div>
         </div>
     </header>
@@ -90,100 +98,82 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">The Idea</h2>
-                    <h3 class="section-subheading text-muted">What we do?</h3>
-                </div>
-            </div>
-            <div class="row text-center">
-				<div class="col-lg-12">
-				<div class="modal-body">
-				A hospital stay is not the most pleasant experience for patients, and they rely solely on <b> pain relief drugs </b> for temporary relief from pain and anxiety. However, this doesn’t help with uplifting their spirits or make their stay more pleasant. Research has shown that patients subject to gripping audio-visual stimuli <b>report almost 25% reduction in perceived pain and close to 60% reduction in anxiety</b>. This approach, termed as <b>distraction therapy</b> is a promising alternative to the conventional drug induced/dependent pain & anxiety management. 
+                    <h2 class="section-heading">Problem</h2>
+                    <h3 class="section-subheading text-muted">Disappointing user experience and high headset cost are hindering mass adoption of virtual reality (VR)1. Currently the VR sector is divided into two categories: 
+Low-cost mobile-VR headsets like Google Cardboard. Since these solutions only track the orientation of the user’s head (3-DoF tracking), they do not allow the user to traverse in a virtual environment, thus being less immersive.
+High-cost solutions like Oculus Rift. They offer great VR experiences thanks to their 6-DoF tracking (head position & orientation), but also require many accessories to function (Fig. 1a).</h3>
+<img src="img/Oculus.png" alt="" width="40%"> <font size="30">+</font> <img src="img/laptop.png" alt=""  width="30%"> <font size="30">Vs </font> <img src="img/card_board.jpg" width="15%" alt="">
+<p class="big"><font size="0.1">.</font></p>
+		
 
-
-				<p> </p>
-<p>
-				We offer pain and anxiety relief through the application of VR with hospitals and healthcare centers. Through our service, patients can virtually <b>'teleport'</b> themselves to a captivating real-life environment with the liberty to <b>explore in real-time</b>. By providing realistic and involving content, we are making the patients’ experience significantly better.
-</p>
-				</div>
-                <!-- <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+		<div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Product</h2>
+                    <h3 class="section-subheading text-muted">Unlike conventional smartphone solutions providing only 3-DoF head tracking, we offer state of the art 6-DoF tracking for mobile-VR. By capturing these additional user movements, we bring the quality and feel to a level comparable to high-end solutions. Our software fully integrates into any smartphone and takes advantage of the phone’s screen, powerful sensors and camera, needing only a mobile-VR headset to function (like Fig. 1b). By bringing $700 headset performance and technology to any $10 headset, we aim at making mobile-VR go viral. Our unique selling proposition (USP) to our clients is that we provide the critical 6-DoF tracking they need but at a fraction of the cost of similar products</h3>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div> -->
-            </div>
+		<div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Market</h2>
+                    <h3 class="section-subheading text-muted">Our focus is on the mobile virtual reality market due to its sheer size and growth1. 
+The VR/AR sector received $2 Billion in investments in 2016 and is estimated to exceed $50 Billion in size by 20203. Biggest market shares include mobile gaming and entertainment, where VRWarg can uniquely position itself due to the need for quality 6-DoF tracking and high cost sensitivity of the end users. In addition to these two fields, VRWarg’s high quality 6-DoF tracking is also essential in virtual real estate and virtual tourism sectors as well as in medical therapies and virtual reality retail, all of which are currently attracting industry interest4.</h3>
+                </div>
+		<div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Business Model</h2>
+                    <h3 class="section-subheading text-muted">We position ourselves as a software company, implementing a business to business (B2B) business model. We generate revenue by licensing our 6-DoF tracking solution to content developers and hardware manufacturers. This allows us to leverage their existing sales channels and product pipelines to reach end users.</h3>
+                </div>
+            </div>            
         </div>
     </section>
 	
-	<!-- Key Features Section -->
+<!-- Key Features Section -->
     <section id="features">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Why VRWarg?</h2>
-                    <h3 class="section-subheading text-muted">Our Features</h3>
+                    <h2 class="section-heading">Key Features - VRWarg</h2>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    	    <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    	    <i class="fa fa-mobile-phone fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Reduced drug dependency</h4>
-                    <p class="text-muted">Reduction in related side-effects</p>
+                    <h4 class="service-heading">6DoF tracking for Mobile-VR</h4>
+                    <p class="text-muted">Real time position tracking for VR application</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-cog fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Better Anxiety Management</h4>
-                    <p class="text-muted">Employing VR to offer pain & anxiety management</p>
+                    <h4 class="service-heading">State-of-the-art algorithm</h4>
+                    <p class="text-muted">Visual-inertial sensor fusion </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Live immersion</h4>
-                    <p class="text-muted">Combination of real-life environment and high quality video</p>
+                    <h4 class="service-heading">In-house solution</h4>
+                    <p class="text-muted">Complete control over software IP</p>
                 </div>
             </div>
 			<div class="row text-center">
                 <div class="col-md-6">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-gamepad fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Remote user control</h4>
-                    <p class="text-muted">Ability to navigate in the remote environment</p>
+                    <h4 class="service-heading">Gaming</h4>
+                    <p class="text-muted">Value addition to virtual reality gaming</p>
                 </div>
                 <div class="col-md-6">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-map-signs fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Plethora of activities</h4>
-                    <p class="text-muted">Explore a new city, museum or experience scuba-diving</p>
+                    <h4 class="service-heading">Indoor navigation</h4>
+                    <p class="text-muted">Providing route guidance for indoor environments </p>
                 </div>
             </div>
         </div>
@@ -246,21 +236,6 @@
                         </ul>
                     </div>
                 </div>
-	<div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/4.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Marcel Starein</h4>
-                        <p class="text-muted">Communications Engineer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="https://www.facebook.com/marcel.starein"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="https://ch.linkedin.com/in/marcel-starein-a8304b104"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
             </div>
             <!-- <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -270,7 +245,7 @@
         </div>
     </section>
 
-    <!-- Clients Aside -->
+    <!-- Clients Aside
     <aside class="clients" >
         <div class="container">
             <div class="row">
@@ -282,7 +257,7 @@
                 
             </div>
         </div>
-    </aside>
+    </aside> -->
 
     <!-- Contact Section -->
     <section id="contact">
@@ -290,10 +265,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Leave us an e-mail at <b> vrwarg@gmail.com</b> .</h3>
+                    <h3 class="section-subheading text-muted"><font size="6" color="white">Leave us an e-mail at: vrwargsolutions@gmail.com</font> .</h3>
                 </div>
             </div>
-            <div class="row">
+           <!-- <div class="row">
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
@@ -325,7 +300,7 @@
                         </div>
                     </form>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
