--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ The VR/AR sector received $2 Billion in investments in 2016 and is estimated to 
                         </ul>
                     </div>
                 </div>
-				<div class="col-sm-4">
+		<div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
                         <h4>Ankit Purohit</h4>
@@ -232,6 +232,21 @@ The VR/AR sector received $2 Billion in investments in 2016 and is estimated to 
                             <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="https://ch.linkedin.com/in/saad-khan-1207562b"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+		<div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/pravir.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Saad Khan</h4>
+                        <p class="text-muted">Mechanical engineer</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="https://www.facebook.com/pravirsinghgupta"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="https://www.linkedin.com/in/pravir-singh-gupta-2b44ab19/"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
