--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ The VR/AR sector received $2 Billion in investments in 2016 and is estimated to 
 		<div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/pravir.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Saad Khan</h4>
+                        <h4>Pravir Singh Gupta</h4>
                         <p class="text-muted">Electrical and Electronics engineer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
