--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ The VR/AR sector received $2 Billion in investments in 2016 and is estimated to 
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; VRWarg 2016</span>
+                    <span class="copyright"><img style="width: 100px;" src="img/logos/VRWargLogo.png"> Copyright &copy; VRWarg 2016</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
