--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Problem</h2>
-                    <h3 class="section-subheading text-muted">Disappointing user experience and high headset cost are hindering mass adoption of virtual reality (VR)1. Currently the VR sector is divided into two categories: 
+                    <h3 class="section-subheading text-muted">Disappointing user experience and high headset cost are hindering mass adoption of virtual reality (VR). Currently the VR sector is divided into two categories: 
 Low-cost mobile-VR headsets like Google Cardboard. Since these solutions only track the orientation of the user’s head (3-DoF tracking), they do not allow the user to traverse in a virtual environment, thus being less immersive.
-High-cost solutions like Oculus Rift. They offer great VR experiences thanks to their 6-DoF tracking (head position & orientation), but also require many accessories to function (Fig. 1a).</h3>
+High-cost solutions like Oculus Rift. They offer great VR experiences thanks to their 6-DoF tracking (head position & orientation), but also require many accessories to function.</h3>
 <img src="img/Oculus.png" alt="" width="40%"> <font size="30">+</font> <img src="img/laptop.png" alt=""  width="30%"> <font size="30">Vs </font> <img src="img/card_board.jpg" width="15%" alt="">
 <p class="big"><font size="0.1">.</font></p>
 		
@@ -109,12 +109,12 @@ High-cost solutions like Oculus Rift. They offer great VR experiences thanks to 
                 </div>
 		<div class="col-lg-12 text-center">
                     <h2 class="section-heading">Product</h2>
-                    <h3 class="section-subheading text-muted">Unlike conventional smartphone solutions providing only 3-DoF head tracking, we offer state of the art 6-DoF tracking for mobile-VR. By capturing these additional user movements, we bring the quality and feel to a level comparable to high-end solutions. Our software fully integrates into any smartphone and takes advantage of the phone’s screen, powerful sensors and camera, needing only a mobile-VR headset to function (like Fig. 1b). By bringing $700 headset performance and technology to any $10 headset, we aim at making mobile-VR go viral. Our unique selling proposition (USP) to our clients is that we provide the critical 6-DoF tracking they need but at a fraction of the cost of similar products</h3>
+                    <h3 class="section-subheading text-muted">Unlike conventional smartphone solutions providing only 3-DoF head tracking, we offer state of the art 6-DoF tracking for mobile-VR. By capturing these additional user movements, we bring the quality and feel to a level comparable to high-end solutions. Our software fully integrates into any smartphone and takes advantage of the phone’s screen, powerful sensors and camera, needing only a mobile-VR headset to function. By bringing $700 headset performance and technology to any $10 headset, we aim at making mobile-VR go viral. Our unique selling proposition (USP) to our clients is that we provide the critical 6-DoF tracking they need but at a fraction of the cost of similar products</h3>
                 </div>
 		<div class="col-lg-12 text-center">
                     <h2 class="section-heading">Market</h2>
-                    <h3 class="section-subheading text-muted">Our focus is on the mobile virtual reality market due to its sheer size and growth1. 
-The VR/AR sector received $2 Billion in investments in 2016 and is estimated to exceed $50 Billion in size by 20203. Biggest market shares include mobile gaming and entertainment, where VRWarg can uniquely position itself due to the need for quality 6-DoF tracking and high cost sensitivity of the end users. In addition to these two fields, VRWarg’s high quality 6-DoF tracking is also essential in virtual real estate and virtual tourism sectors as well as in medical therapies and virtual reality retail, all of which are currently attracting industry interest4.</h3>
+                    <h3 class="section-subheading text-muted">Our focus is on the mobile virtual reality market due to its sheer size and growth. 
+The VR/AR sector received $2 Billion in investments in 2016 and is estimated to exceed $50 Billion in size by 2020. Biggest market shares include mobile gaming and entertainment, where VRWarg can uniquely position itself due to the need for quality 6-DoF tracking and high cost sensitivity of the end users. In addition to these two fields, VRWarg’s high quality 6-DoF tracking is also essential in virtual real estate and virtual tourism sectors as well as in medical therapies and virtual reality retail, all of which are currently attracting industry interest.</h3>
                 </div>
 		<div class="col-lg-12 text-center">
                     <h2 class="section-heading">Business Model</h2>
